src/app-mesh/create-mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bcheck-mesh-ns
  labels:
    mesh: bcheck-mesh
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
