src/app-mesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bcheck-mesh-ns
  labels:
    mesh: bcheck-mesh
    gateway: bcheck-gateway
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
