src/app-mesh/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-mesh-ns
  name: bcheck-api-server
  labels:
    app: bcheck-api-server
spec:
  type: ClusterIP
  ports:
    - port: 7777
  selector:
    app: bcheck-api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bcheck-mesh-ns
  name: bcheck-api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bcheck-api-server
  template:
    metadata:
      labels:
        app: bcheck-api-server
    spec:
      serviceAccountName: bcheck-service
      containers:
        - name: bcheck-api
          image: 160270626841.dkr.ecr.ap-northeast-2.amazonaws.com/bcheck-api:latest
          ports:
            - containerPort: 7777
          resources:
            requests:
              memory: "1024Mi"
              cpu: "512m"
            limits:
              memory: "4098Mi"
              cpu: "1024m"
          readinessProbe:
            httpGet:
              path: /app/api/health/check
              port: 7777
            initialDelaySeconds: 30
            periodSeconds: 10
---
