src/app-mesh/create-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcheck-gateway
  namespace: bcheck-mesh-ns
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      name: http
  selector:
    app: bcheck-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcheck-gateway
  namespace: bcheck-mesh-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcheck-gateway
  template:
    metadata:
      labels:
        app: bcheck-gateway
    spec:
      serviceAccountName: bcheck-mesh-ns-service
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.ap-southeast-1.amazonaws.com/aws-appmesh-envoy:v1.15.0.0-prod
          ports:
            - containerPort: 8000
