src/app-mesh/create-grafana-log-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcheck-grafana-log-lb
  namespace: bcheck-mesh-ns
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: bcheck-grafana-log-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcheck-grafana-log-lb
  namespace: bcheck-mesh-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcheck-grafana-log-lb
  template:
    metadata:
      labels:
        app: bcheck-grafana-log-lb
    spec:
      serviceAccountName: bcheck-mesh-ns-service
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.ap-southeast-1.amazonaws.com/aws-appmesh-envoy:v1.15.0.0-prod
          ports:
            - containerPort: 3000
