src/app-mesh/appmesh-bcheck-mesh-gateway-ns.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: bcheck-gatewayserver
  namespace: bcheck-mesh-ns
spec:
  awsName: bcheck-gatewayserver
  provider:
    virtualRouter:
      virtualRouterRef:
        name: bcheck-gatewayserver
