src/app-mesh/appmesh-bcheck-mesh-log-promethous.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: bcheck-prometheous-logserver
  namespace: bcheck-mesh-ns
spec:
  awsName: bcheck-prometheous-logserver.bcheck-mesh-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: bcheck-prometheous-logserver
