src/app-mesh/appmesh-bcheck-mesh-ns-api.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: bcheck-api-server
  namespace: bcheck-mesh-ns
spec:
  awsName: bcheck-api-server.bcheck-mesh-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: bcheck-api-server
