src/app-mesh/appmesh-bcheck-mesh-ns-auth.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: bcheck-auth-server
  namespace: bcheck-mesh-ns
spec:
  awsName: bcheck-auth-server
  provider:
    virtualNode:
      virtualNodeRef:
        name: bcheck-auth-server
